# ready_chromedev

./: .gitignore  .mcp.json  index.html  readme.md  script.js  style.css
.codex/: config.toml
_forAI/: README.md  dev_log.md  inventory.md  memo.md  plan.md
docs/: chrome-mcp-guide.md
gui_tool/: README.md  pyproject.toml
gui_tool/src/gui_tool/: __init__.py  app.py  cleanup.py  devtools.py  mcp_server.py  profiles.py  rpc.py
gui_tool/tests/: test_cleanup.py  test_profiles.py  test_rpc.py  test_tunnel.py
scripts/: Register-CodexChromeDevToolsMcp.ps1  register-codex-chrome-devtools-mcp.sh
tunnel_gui/: README.md  chrome_devtools_tunnel_gui.py  profiles.yaml  pyproject.toml
tunnel_gui/chrome_tunnel_gui/: __init__.py  app.py  profiles.py  tunnel.py
tunnel_gui/tests/: test_profiles.py  test_tunnel.py
