[project]
name = "chrome-devtools-gui-tool"
version = "0.4.0"
description = "Tkinter connection manager for local and reverse-tunneled Chrome DevTools MCP, drivable by AI over JSON-RPC/MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
gui-tool = "gui_tool.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gui_tool"]
